Home page done, working on about page

--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
     <section id="about">
         <img id="guia" src="../images/pattern.png" alt="guia">
         <section id="navBar">
-            <a href="/" class="logo">
+            <a href="/portfolio" class="logo">
                 <img src="../images/svg_logo_verde.svg" alt="Logo">
             </a>
             <div class="separador"></div>
