--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
             <div class="separador"></div>
             <ul class="menu">
                 <li>
-                    <a href="/">
+                    <a href="/portfolio">
                         <i class="fas fa-home"></i>
                         <span>Home</span>
                     </a>
