--- a/about/index.html
+++ b/about/index.html
@@ -18,13 +18,13 @@
         <img id="guia" src="../images/pattern.png" alt="guia">
         <div id="navAnchor">
             <section id="navBar">
-                <a href="/portfolio" class="logo">
+                <a href="/" class="logo">
                     <img src="../images/svg_logo_verde.svg" alt="Logo">
                 </a>
                 <div class="separador"></div>
                 <ul class="menu">
                     <li>
-                        <a href="/portfolio">
+                        <a href="/">
                             <i class="fas fa-home"></i>
                             <span>Home</span>
                         </a>
@@ -138,9 +138,7 @@
                     <article class="display ui">
                         <div id="uiContent" class="content">
                             <h1>User Interface Design</h1>
-                            <p>Able to define the form, function, usability, ergonomics, brand image and other aspects
-                                that affect the external appearance of user interfaces in systems of all types, all this
-                                through principles of visual and graphic design.</p>
+                            <p>Able to define the form, function, usability, ergonomics, brand image and other aspects that affect the external appearance of user interfaces in systems of all types, all this through principles of visual and graphic design.</p>
 
                             <div class="software">
                                 <i class="fab fa-adobe"></i>
@@ -150,9 +148,7 @@
 
                         <div id="uxContent" class="content">
                             <h1>User Experience Design</h1>
-                            <p>Able to define the form, function, usability, ergonomics, brand image and other aspects
-                                that affect the external appearance of user interfaces in systems of all types, all this
-                                through principles of visual and graphic design.</p>
+                            <p>Able to create products, solutions or prototypes, combining different kinds of methodologies, that customers / users would be attracted to, be easy to use and quickly to understand, in order to bring them the best experience possible.</p>
 
                             <div class="software">
                                 <i class="fab fa-adobe"></i>
@@ -206,6 +202,13 @@
             </article>
 
         </section>
+        <article class="title">
+                <h1>Featured Work</h1>
+                <div class="decoration">
+                    <div class="line"></div>
+                    <div class="dot"></div>
+                </div>
+            </article>
     </section>
 
     <script src="../p5/sketch.js"></script>
