--- a/about/index.html
+++ b/about/index.html
@@ -6,10 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/p5/p5.min.js"></script>
+
+    <!--  -->
+    <link href="../fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="../fontawesome/css/brands.css" rel="stylesheet">
+    <link href="../fontawesome/css/solid.css" rel="stylesheet">
+    <!--  -->
+    
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
-    <script src="../p5/p5.min.js"></script>
-    <script src="https://kit.fontawesome.com/c569b7fd47.js"></script>
     <title>About - Santiago Mondragón</title>
 </head>
 
@@ -17,65 +24,65 @@
     <section id="about">
         <img id="guia" src="../images/pattern.png" alt="guia">
         <div id="navAnchor">
-            <section id="navBar">
-                <a href="/" class="logo">
-                    <img src="../images/svg_logo_verde.svg" alt="Logo">
-                </a>
-                <div class="separador"></div>
-                <ul class="menu">
-                    <li>
-                        <a href="/">
-                            <i class="fas fa-home"></i>
-                            <span>Home</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/about">
-                            <i class="fas fa-user-astronaut"></i>
-                            <span>About Me</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/work">
-                            <i class="fas fa-briefcase"></i>
-                            <span>My Work</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/contact">
-                            <i class="fas fa-mail-bulk"></i>
-                            <span>Contact Me</span>
-                        </a>
-                    </li>
-                </ul>
-                <div class="separador"></div>
-                <div class="contSocial">
-                    <i class="fas fa-at"></i>
-                    <ul class="social">
+                <section id="navBar">
+                    <a href="/" class="logo">
+                        <img src="../images/svg_logo_verde.svg" alt="Logo">
+                    </a>
+                    <div class="separador"></div>
+                    <ul class="menu">
                         <li>
-                            <a target="_blank" href="https://www.behance.net/santimondragon">
-                                <img src="../images/svg_Behance.svg" alt="Behance Logo">
+                            <a href="/">
+                                <i class="fas fa-home"></i>
+                                <span>Home</span>
                             </a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.linkedin.com/in/santimondragon/">
-                                <img src="../images/svg_Linkedin.svg" alt="Linkedin Logo">
+                            <a href="/about"  class="active">
+                                <i class="fas fa-user-astronaut"></i>
+                                <span>About Me</span>
                             </a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.github.com/santimondragon">
-                                <img src="../images/svg_Github.svg" alt="Github Logo">
+                            <a href="/work">
+                                <i class="fas fa-briefcase"></i>
+                                <span>My Work</span>
                             </a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.instagram.com/santimondragon">
-                                <img src="../images/svg_Instagram.svg" alt="Instagram Logo">
+                            <a href="/contact"">
+                                <i class="fas fa-mail-bulk"></i>
+                                <span>Contact Me</span>
                             </a>
                         </li>
                     </ul>
-                </div>
-            </section>
-        </div>
+                    <div class="separador"></div>
+                    <div class="contSocial">
+                        <i class="fas fa-at"></i>
+                        <ul class="social">
+                            <li>
+                                <a target="_blank" href="https://www.behance.net/santimondragon">
+                                    <i class="fab fa-behance"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://www.linkedin.com/in/santimondragon/">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://www.github.com/santimondragon">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://www.instagram.com/santimondragon">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
         <article class="title">
             <h1>About Me</h1>
             <div class="decoration">
@@ -95,21 +102,20 @@
                     I am an Interactive Media Designer student at Icesi University in Cali, Colombia, currently on my
                     last year. Always aiming to make a difference through my creative work, passioned about learning,
                     leader with initiative and analytical thinking. Skilled in collaborative and design software, with
-                    advanced knowledge and experience in HCI, Web Design and
-                    Front-end Development. I have worked with project teams to create user-friendly and appealing
-                    application interfaces and websites for users.
+                    advanced knowledge and experience in UI/UX Design, HCI and Front-end Development. I have worked with
+                    project teams to create friendly and appealing application interfaces and websites for their users.
                 </p>
             </div>
             <article class="data">
-                <a href="#">
+                <a target="_blank" href="https://www.behance.net/santimondragon">
                     <i class="fab fa-behance"></i>
                     <p>My Behance</p>
                 </a>
-                <a href="#">
+                <a target="_blank" href="https://www.linkedin.com/in/santimondragon/">
                     <i class="fab fa-linkedin-in"></i>
                     <p>My LinkedIn</p>
                 </a>
-                <a href="#">
+                <a target="_blank" href="https://www.github.com/santimondragon">
                     <i class="fab fa-github"></i>
                     <p>My GitHub</p>
                 </a>
@@ -138,7 +144,9 @@
                     <article class="display ui">
                         <div id="uiContent" class="content">
                             <h1>User Interface Design</h1>
-                            <p>Able to define the form, function, usability, ergonomics, brand image and other aspects that affect the external appearance of user interfaces in systems of all types, all this through principles of visual and graphic design.</p>
+                            <p>Able to define the form, function, usability, ergonomics, brand image and other aspects
+                                that affect the external appearance of user interfaces in systems of all types, all this
+                                through principles of visual and graphic design.</p>
 
                             <div class="software">
                                 <i class="fab fa-adobe"></i>
@@ -148,7 +156,9 @@
 
                         <div id="uxContent" class="content">
                             <h1>User Experience Design</h1>
-                            <p>Able to create products, solutions or prototypes, combining different kinds of methodologies, that customers / users would be attracted to, be easy to use and quickly to understand, in order to bring them the best experience possible.</p>
+                            <p>Able to create products, solutions or prototypes, combining different kinds of
+                                methodologies, that customers / users would be attracted to, be easy to use and quickly
+                                to understand, in order to bring them the best experience possible.</p>
 
                             <div class="software">
                                 <i class="fab fa-adobe"></i>
@@ -168,7 +178,7 @@
                                 <i class="fab fa-css3-alt"></i>
                                 <i class="fab fa-html5"></i>
                                 <i class="fab fa-js"></i>
-                                <i class="fab fa-node-js"></i>
+                                <i class="fab fa-npm"></i>
                                 <i class="fab fa-react"></i>
                             </div>
                         </div>
@@ -199,20 +209,96 @@
                         <div class="dot"></div>
                     </div>
                 </article>
+                <div class="options">
+                    <article class="display leader">
+                        <div id="leaderContent" class="content">
+                            <h1>Leadership</h1>
+                            <p>Able to define the form, function, usability, ergonomics, brand image and other aspects
+                                that affect the external appearance of user interfaces in systems of all types, all this
+                                through principles of visual and graphic design.</p>
+
+                            <div class="software">
+                                <i class="fas fa-users"></i>
+                                <i class="fas fa-chalkboard-teacher"></i>
+                                <i class="fas fa-balance-scale"></i>
+                            </div>
+                        </div>
+
+                        <div id="teamContent" class="content">
+                            <h1>Team Work</h1>
+                            <p>Able to create products, solutions or prototypes, combining different kinds of
+                                methodologies, that customers / users would be attracted to, be easy to use and quickly
+                                to understand, in order to bring them the best experience possible.</p>
+
+                            <div class="software">
+                                <i class="fas fa-comments"></i>
+                                <i class="fab fa-slack"></i>
+                                <i class="fas fa-handshake"></i>
+                            </div>
+                        </div>
+
+                        <div id="analyticContent" class="content">
+                            <h1>Analytical Thinking</h1>
+                            <p>Able to define the form, function, usability, ergonomics, brand image and other aspects
+                                that affect the external appearance of user interfaces in systems of all types, all this
+                                through principles of visual and graphic design.</p>
+
+                            <div class="software">
+                                <i class="fas fa-puzzle-piece"></i>
+                                <i class="fas fa-map-signs"></i>
+                                <i class="fas fa-cogs"></i>
+                            </div>
+                        </div>
+
+                        <div id="businessContent" class="content">
+                            <h1>Business Focused</h1>
+                            <p>Able to define the form, function, usability, ergonomics, brand image and other aspects
+                                that affect the external appearance of user interfaces in systems of all types, all this
+                                through principles of visual and graphic design.</p>
+
+                            <div class="software">
+                                <i class="fas fa-chart-line"></i>
+                                <i class="fas fa-percent"></i>
+                                <i class="fas fa-dollar-sign"></i>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="icons">
+                        <i class="fas fa-child active"></i>
+                        <i class="fas fa-users"></i>
+                        <i class="fas fa-brain"></i>
+                        <i class="fas fa-search-dollar"></i>
+                    </article>
+                </div>
             </article>
 
         </section>
         <article class="title">
-                <h1>Featured Work</h1>
-                <div class="decoration">
-                    <div class="line"></div>
-                    <div class="dot"></div>
-                </div>
+            <h1>Featured Work</h1>
+            <div class="decoration">
+                <div class="line"></div>
+                <div class="dot"></div>
+            </div>
+        </article>
+        <section id="featuredWork">
+            <a href="#" class="project" id="main">
+
+            </a>
+            <article id="secundary">
+                <a href="#" class="project" id="projectTwo">
+
+                </a>
+                <a href="#" class="project" id="projectThree">
+
+                </a>
             </article>
+
+        </section>
     </section>
 
-    <script src="../p5/sketch.js"></script>
-    <script src="../p5/particle.js"></script>
+    <script src="../js/p5/sketch.js"></script>
+    <script src="../js/p5/particle.js"></script>
     <script src="../js/main.js"></script>
 </body>
 
