--- a/contact/index.html
+++ b/contact/index.html
@@ -6,19 +6,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/p5/p5.min.js"></script>
+
+    <!--  -->
+    <link href="../fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="../fontawesome/css/brands.css" rel="stylesheet">
+    <link href="../fontawesome/css/solid.css" rel="stylesheet">
+    <!--  -->
+
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
-    <script src="../p5/p5.min.js"></script>
     <title>Contact - Santiago Mondragón</title>
 </head>
 
 <body>
-    <img id="guia" src="../images/pattern.png" alt="guia">
-    <a href="/" id="backArrow">
-        <img src="../images/arrowBack.png" alt="backArrow">
-    </a>
-    <script src="../p5/sketch.js"></script>
-    <script src="../p5/particle.js"></script>
+    <section id="contact">
+        <img id="guia" src="../images/pattern.png" alt="guia">
+        <div id="navAnchor">
+            <section id="navBar">
+                <a href="/" class="logo">
+                    <img src="../images/svg_logo_verde.svg" alt="Logo">
+                </a>
+                <div class="separador"></div>
+                <ul class="menu">
+                    <li>
+                        <a href="/">
+                            <i class="fas fa-home"></i>
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/about">
+                            <i class="fas fa-user-astronaut"></i>
+                            <span>About Me</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/work">
+                            <i class="fas fa-briefcase"></i>
+                            <span>My Work</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/contact" class="active">
+                            <i class="fas fa-mail-bulk"></i>
+                            <span>Contact Me</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="separador"></div>
+                <div class="contSocial">
+                    <i class="fas fa-at"></i>
+                    <ul class="social">
+                        <li>
+                            <a target="_blank" href="https://www.behance.net/santimondragon">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://www.linkedin.com/in/santimondragon/">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://www.github.com/santimondragon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a target="_blank" href="https://www.instagram.com/santimondragon">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <article class="title">
+            <h1>Contact Me</h1>
+            <div class="decoration">
+                <div class="line"></div>
+                <div class="dot"></div>
+            </div>
+        </article>
+        <section id="contactInformation">
+            <a href="tel:+57317435163" class="info"><i class="fas fa-phone"></i> +57 317 435 1683</h1>
+            <a href="mailto:santimondragonm@gmail.com?Subject=Hello Santi!" target="_top" class="info"><i class="fas fa-envelope"></i> santimondragonm@gmail.com</h1>
+            <a href="https://goo.gl/maps/d8o5Fea7L8XW14L89" target="_blank" class="info"><i class="fas fa-map-marked"></i> Cali, Colombia</a>
+        </section>
+        <script type="text/javascript">
+            var submitted = false;
+        </script>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
+            onload="if(submitted) {window.location='contact.html';}"></iframe>
+        <form id="contactForm"
+            action="https://docs.google.com/forms/d/e/1FAIpQLSdxn-hsND8G5hCBLKGWlBPapCaL05socw2jo7TtXvIg8Z_8ZQ/formResponse"
+            method="post" target="hidden_iframe" onsubmit="submitted=true;">
+            <div class="half">
+                <article>
+                    <label for="entry.293611445">Full Name</label>
+                    <input type="text" placeholder="Your Full Name" name="entry.293611445" required>
+                </article>
+                <article>
+                    <label for="entry.102774836">Contact Number</label>
+                    <input type="number" placeholder="Your Contact Number" name="entry.102774836" required>
+                </article>
+            </div>
+            <label for="entry.1181057222">Email Address</label>
+            <input type="email" placeholder="Your Email Address" name="entry.1181057222" required>
+
+            <label for="entry.1770322555">Message</label>
+            <textarea rows="8" placeholder="Your Message" name="entry.1770322555"></textarea>
+
+            <button type="submit"><span>Send</span> <i class="fas fa-paper-plane"></i></button>
+        </form>
+        <img src="images/pattern.png" alt="" id="pattern">
+    </section>
+
+    <script src="../js/p5/sketch.js"></script>
+    <script src="../js/p5/particle.js"></script>
     <script src="js/main.js"></script>
 </body>
 
