--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <script src="p5/p5.min.js"></script>
+
+    <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/p5/p5.min.js"></script>
+
+    <!--  -->
+    <link href="../fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="../fontawesome/css/brands.css" rel="stylesheet">
+    <link href="../fontawesome/css/solid.css" rel="stylesheet">
+    <!--  -->
+
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <title>Home - Santiago Mondragón</title>
 </head>
 
@@ -22,8 +30,8 @@
             <h1 class="name">SANTIAGO MONDRAGÓN</h1>
             <h2 class="ocupation">DESIGNER & DEVELOPER</h2>
         </article>
-        <a id="downloadCV" href="Santiago Mondragón Resume.pdf" target="pdf-frame">
-            <span>Download Resume <img src="images/svg_cloud.svg" alt="Cloud Download"></span>
+        <a id="downloadCV" href="../Santiago Mondragón Resume.pdf" target="pdf-frame">
+            <span>Download Resume</span> <i class="fas fa-file-download"></i>
         </a>
         <ul id="menu">
             <li><a href="#">Home</a></li>
@@ -34,39 +42,39 @@
         <ul id="social">
             <li>
                 <a target="_blank" href="https://www.behance.net/santimondragon">
-                    <img src="images/svg_Behance.svg" alt="Behance Logo">
+                    <i class="fab fa-behance"></i>
                 </a>
             </li>
             <li>
                 <a target="_blank" href="https://www.linkedin.com/in/santimondragon/">
-                    <img src="images/svg_Linkedin.svg" alt="Linkedin Logo">
+                    <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
             <li>
                 <a target="_blank" href="https://www.github.com/santimondragon">
-                    <img src="images/svg_Github.svg" alt="Github Logo">
+                    <i class="fab fa-github"></i>
                 </a>
             </li>
             <li>
                 <a target="_blank" href="https://www.instagram.com/santimondragon">
-                    <img src="images/svg_Instagram.svg" alt="Instagram Logo">
+                    <i class="fab fa-instagram"></i>
                 </a>
             </li>
         </ul>
         <ul id="language">
-            <li class="used">
+            <li>
                 <a href="#">
                     <span>ESP</span>
                 </a>
             </li>
-            <li>
+            <li class="used">
                 <a href="#">
                     <span>ENG</span>
                 </a>
             </li>
         </ul>
     </nav>
-    
+
     <script src="p5/sketch.js"></script>
     <script src="p5/particle.js"></script>
     <script src="js/main.js"></script>
