Basic Structure is complete, work html fixed

--- a/work/index.html
+++ b/work/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/styles.css">
+    
+    <!--  -->
+    <link href="../fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="../fontawesome/css/brands.css" rel="stylesheet">
+    <link href="../fontawesome/css/solid.css" rel="stylesheet">
+    <!--  -->
+
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
-    <script src="../p5/p5.min.js"></script>
-    <title>work - Santiago Mondragón</title>
+    <title>Work - Santiago Mondragón</title>
 </head>
 
 <body>
