Basic Structure is complete, work html fixed

--- a/work/index.html
+++ b/work/index.html
@@ -102,8 +102,8 @@
     </section>
 
 
-    <script src="../p5/sketchProjects.js"></script>
-    <script src="../p5/particle.js"></script>
+    <script src="../js/p5/sketchProjects.js"></script>
+    <script src="../js/p5/particle.js"></script>
     <script src="js/main.js"></script>
 </body>
 
