--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         </ul>
     </nav>
 
-    <script src="p5/sketch.js"></script>
-    <script src="p5/particle.js"></script>
+    <script src="js/p5/sketch.js"></script>
+    <script src="js/p5/particle.js"></script>
     <script src="js/main.js"></script>
 </body>
 
