Featured Work added, links not working yet

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
     <link href="../fontawesome/css/brands.css" rel="stylesheet">
     <link href="../fontawesome/css/solid.css" rel="stylesheet">
     <!--  -->
-    
+
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <title>About - Santiago Mondragón</title>
 </head>
@@ -24,65 +24,65 @@
     <section id="about">
         <img id="guia" src="../images/pattern.png" alt="guia">
         <div id="navAnchor">
-                <section id="navBar">
-                    <a href="/" class="logo">
-                        <img src="../images/svg_logo_verde.svg" alt="Logo">
-                    </a>
-                    <div class="separador"></div>
-                    <ul class="menu">
+            <section id="navBar">
+                <a href="/" class="logo">
+                    <img src="../images/svg_logo_verde.svg" alt="Logo">
+                </a>
+                <div class="separador"></div>
+                <ul class="menu">
+                    <li>
+                        <a href="/">
+                            <i class="fas fa-home"></i>
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/about" class="active">
+                            <i class="fas fa-user-astronaut"></i>
+                            <span>About Me</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/work">
+                            <i class="fas fa-briefcase"></i>
+                            <span>My Work</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/contact"">
+                                <i class=" fas fa-mail-bulk"></i>
+                            <span>Contact Me</span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="separador"></div>
+                <div class="contSocial">
+                    <i class="fas fa-at"></i>
+                    <ul class="social">
                         <li>
-                            <a href="/">
-                                <i class="fas fa-home"></i>
-                                <span>Home</span>
+                            <a target="_blank" href="https://www.behance.net/santimondragon">
+                                <i class="fab fa-behance"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="/about"  class="active">
-                                <i class="fas fa-user-astronaut"></i>
-                                <span>About Me</span>
+                            <a target="_blank" href="https://www.linkedin.com/in/santimondragon/">
+                                <i class="fab fa-linkedin-in"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="/work">
-                                <i class="fas fa-briefcase"></i>
-                                <span>My Work</span>
+                            <a target="_blank" href="https://www.github.com/santimondragon">
+                                <i class="fab fa-github"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="/contact"">
-                                <i class="fas fa-mail-bulk"></i>
-                                <span>Contact Me</span>
+                            <a target="_blank" href="https://www.instagram.com/santimondragon">
+                                <i class="fab fa-instagram"></i>
                             </a>
                         </li>
                     </ul>
-                    <div class="separador"></div>
-                    <div class="contSocial">
-                        <i class="fas fa-at"></i>
-                        <ul class="social">
-                            <li>
-                                <a target="_blank" href="https://www.behance.net/santimondragon">
-                                    <i class="fab fa-behance"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://www.linkedin.com/in/santimondragon/">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://www.github.com/santimondragon">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://www.instagram.com/santimondragon">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </section>
-            </div>
+                </div>
+            </section>
+        </div>
         <article class="title">
             <h1>About Me</h1>
             <div class="decoration">
@@ -136,21 +136,25 @@
                 </article>
                 <div class="options">
                     <article class="icons">
-                        <i class="fas fa-edit active"></i>
+                        <i class="fas fa-laptop-code active"></i>
                         <i class="fas fa-drafting-compass"></i>
-                        <i class="fas fa-laptop-code"></i>
+                        <i class="fas fa-edit"></i>
                         <i class="fas fa-search"></i>
                     </article>
-                    <article class="display ui">
-                        <div id="uiContent" class="content">
-                            <h1>User Interface Design</h1>
+                    <article class="display web">
+
+                        <div id="webContent" class="content">
+                            <h1>Front-end Development</h1>
                             <p>Able to define the form, function, usability, ergonomics, brand image and other aspects
                                 that affect the external appearance of user interfaces in systems of all types, all this
                                 through principles of visual and graphic design.</p>
 
                             <div class="software">
-                                <i class="fab fa-adobe"></i>
-                                <i class="fab fa-figma"></i>
+                                <i class="fab fa-angular"></i>
+                                <i class="fab fa-css3-alt"></i>
+                                <i class="fab fa-html5"></i>
+                                <i class="fab fa-js"></i>
+                                <i class="fab fa-react"></i>
                             </div>
                         </div>
 
@@ -167,19 +171,15 @@
                             </div>
                         </div>
 
-                        <div id="webContent" class="content">
-                            <h1>Web Development</h1>
+                        <div id="uiContent" class="content">
+                            <h1>User Interface Design</h1>
                             <p>Able to define the form, function, usability, ergonomics, brand image and other aspects
                                 that affect the external appearance of user interfaces in systems of all types, all this
                                 through principles of visual and graphic design.</p>
 
                             <div class="software">
-                                <i class="fab fa-angular"></i>
-                                <i class="fab fa-css3-alt"></i>
-                                <i class="fab fa-html5"></i>
-                                <i class="fab fa-js"></i>
-                                <i class="fab fa-npm"></i>
-                                <i class="fab fa-react"></i>
+                                <i class="fab fa-adobe"></i>
+                                <i class="fab fa-figma"></i>
                             </div>
                         </div>
 
@@ -282,16 +282,65 @@
             </div>
         </article>
         <section id="featuredWork">
-            <a href="#" class="project" id="main">
 
-            </a>
+            <article class="project" id="main">
+                <span class="type"><i class="fas fa-drafting-compass"></i> UI/UX Design</span>
+                <span class="year">2018</span>
+                <span class="name">iPets</span>
+                <img class="bg" src="../images/iPets_bg.jpg" alt="iPets Project Bg">
+                <img class="prev" src="../images/iPets_prev.png" alt="iPets Project prev">
+                <a href="#" class="overlay">
+                    <i class="fas fa-search"></i>
+                    <span>Ver Proyecto.</span>
+                </a>
+                <div class="links">
+                    <a target="_blank" href="https://www.behance.net/gallery/79220767/iPets-UIUX-Design">
+                        <i class="fab fa-behance"></i>
+                    </a>
+                </div>
+            </article>
+
             <article id="secundary">
-                <a href="#" class="project" id="projectTwo">
+                <article class="project" id="projectTwo">
+                    <span class="type"><i class="fas fa-laptop-code"></i>Web Development</span>
+                    <span class="year">2018</span>
+                    <span class="name">BuddyFinder</span>
+                    <img class="bg" src="../images/buddyFinder_bg.jpg" alt="iPets Project Bg">
+                    <img class="prev" src="../images/buddyFinder_prev.png" alt="iPets Project prev">
+                    <a href="#" class="overlay">
+                        <i class="fas fa-search"></i>
+                        <span>Ver Proyecto.</span>
+                    </a>
+                    <div class="links">
+                        <a href="#">
+                            <i class="fab fa-behance"></i>
+                        </a>
 
-                </a>
-                <a href="#" class="project" id="projectThree">
+                        <a href="#">
+                            <i class="fab fa-github"></i>
+                        </a>
 
-                </a>
+                        <a href="#">
+                            <i class="fas fa-globe-americas"></i>
+                        </a>
+                    </div>
+                </article>
+                <article class="project" id="projectThree">
+                        <span class="type"><i class="fas fa-drafting-compass"></i>UI/UX Design</span>
+                        <span class="year">2017</span>
+                        <span class="name">Banner</span>
+                        <img class="bg" src="../images/buddyFinder_bg.jpg" alt="iPets Project Bg">
+                        <img class="prev" src="../images/buddyFinder_prev.png" alt="iPets Project prev">
+                        <a href="#" class="overlay">
+                            <i class="fas fa-search"></i>
+                            <span>Ver Proyecto.</span>
+                        </a>
+                        <div class="links">
+                            <a href="#">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                        </div>
+                </article>
             </article>
 
         </section>
