--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 </head>
 
 <body>
+    <div id="overlay">
+        <div id="progstat"></div>
+        <div id="progress"></div>
+    </div>
     <img id="guia" src="images/pattern.png" alt="guia">
     <nav id="navbar">
         <article id="greet">
@@ -77,6 +81,7 @@
 
     <script src="js/p5/sketch.js"></script>
     <script src="js/p5/particle.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
