--- a/work/index.html
+++ b/work/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
+    <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/p5/p5.min.js"></script>
+    
     <!--  -->
     <link href="../fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="../fontawesome/css/brands.css" rel="stylesheet">
