Navbar route fixed

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <span>Download Resume</span> <i class="fas fa-file-download"></i>
             </a>
             <ul id="menu">
-                <li><a href="#/">Home</a></li>
-                <li><a href="#/about">About Me</a></li>
-                <li><a href="#/work">My Work</a></li>
-                <li><a href="#/contact">Contact Me</a></li>
+                <li><a href="/#/">Home</a></li>
+                <li><a href="/#/about">About Me</a></li>
+                <li><a href="/#/work">My Work</a></li>
+                <li><a href="/#/contact">Contact Me</a></li>
             </ul>
             <ul id="social">
                 <li>
