--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     <span class="type"><i class="fas fa-drafting-compass"></i>UI/UX Design</span>
                     <span class="year">2017</span>
                     <span class="name">Banner</span>
-                    <img class="bg" src="../assets/images/buddyFinder_bg.jpg" alt="iPets Project Bg">
+                    <img class="bg" src="../assets/images/banner_bg.jpg" alt="iPets Project Bg">
                     <img class="prev" src="../assets/images/buddyFinder_prev.png" alt="iPets Project prev">
                     <a href="#" class="overlay">
                         <i class="fas fa-search"></i>
@@ -474,6 +474,8 @@
 
     <!-- SIDE NAVBAR -->
     <div id="navAnchor" class="navbarHidden">
+        <i class="fas fa-bars" id="hamOpen"></i>
+        <i class="fas fa-times" id="hamClose"></i>
         <section id="navBar">
             <a href="/#/" class="logo">
                 <img src="../assets/svg/svg_logo_verde.svg" alt="Logo">
